<resources>
    <string name="app_name">SitharaTrad</string>
    <string name="hello_blank_fragment">blank Fragment</string>

    <!-- Commonly Used Strings -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="dashboard">Dashboard</string>
    <string name="sithara_trad">Sithara Trad</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="next">Next</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="hint_text">Please Wait, auto-detecting the OTP</string>
    <string name="hint_text1">Please enter the OTP received </string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="pincode">Pin Code</string>
    <string name="GSTIN_number">GSTIN Number</string>
    <string name="shop_name">Shop Name</string>

    <!--    Product Details-->
    <string name="product_name">Product Name</string>
    <string name="product_cost">Product Cost</string>
    <string name="product_type">Product Type</string>
    <string name="product_Offer">Product Offer</string>
    <string name="product_availability">Product Availability</string>
    <string name="product_image">Product Image</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="internet_con">Connected to Internet</string>
    <string name="internet_discon">No Connectivity</string>

    <!--    String Arrays-->
    <string-array name="var_cart">
        <item>NewItem</item>
        <item>TopOffers</item>
        <item>TopBrands</item>
        <item>TopSelling</item>
    </string-array>
    <!-- Transaction Status  -->
    <string name="t_completed">Completed</string>
    <string name="t_failed">Failed</string>
    <string name="t_inprogress">InProgress</string>
    <string name="t_ordered">Ordered</string>
    <string name="t_accepted">Accepted</string>
    <string name="search_tag">Product Name/Transaction ID</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="accept_order">Accept</string>
    <string name="order_inprogress">InProgress</string>
    <string name="cancel_order">Cancel</string>

</resources>